--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,4 +2,7 @@
 <h1>Contact</h1>
 <p>
 	For any questions or comments, please feel free to contact me at: mlli2@illinois.edu
+	<div>
+		<a href = "https://www.facebook.com/michaeloscarli">My Facebook page</a>
+	</div>
 </p>
